--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>It Fits</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <meta name="author" content="Shekhar Sharma">
+  <meta name="author" content="Daniel Cabrera" >
   <meta name="version" content="1.0.2b">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:regular" type="text/css" >
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Junge" type="text/css">
@@ -22,7 +22,7 @@
       <div class="container">
         <a id="logo" href="index.html">It Fits</a>
         <ul class="social-icons">
-          <li><a href="http://www.facebook.com/blog.cssjuntion" class="icon flip">^</a></li>
+          <li><a href="https://www.facebook.com/pages/APCCAP-Asociación-Peruana-de-Cetrería-y-Conservación-de-Aves-de-Presa" class="icon flip">^</a></li>
           <li><a href="" class="icon">T</a></li>
           <li><a href="http://www.twitter.com/cssjunction" class="icon">^</a></li>
         </ul>
