--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <nav class="clearfix">
           <ul role="navigation">
             <li>
-              <a href="index.html" class="activePage"><span class="icon">S</span>Home</a>
+              <a href="index.html" class="activePage"><span class="icon">S</span>Inicio</a>
             </li>
             <li>
-              <a href="portfolio.html"><span class="icon">Û</span>Portfolio</a>
+              <a href="portfolio.html"><span class="icon">Û</span>Sobre APCCAP</a>
             </li>
             <li>
-              <a href="page.html"><span class="icon">E</span>Page</a>
+              <a href="page.html"><span class="icon">E</span>Foro</a>
             </li>
             <li>
-              <a href="blog.html"><span class="icon">E</span>Blog</a>
+              <a href="blog.html"><span class="icon">E</span>Eventos</a>
             </li>
             <li>
-              <a href="contact.html"><span class="icon">M</span>Contact us</a>
+              <a href="contact.html"><span class="icon">M</span>Contactenos</a>
             </li>
           </ul>
         </nav>
