--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>It Fits</title>
+  <title>Asociación Peruana de Cetrería y Conservación de Aves de Presa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="Daniel Cabrera" >
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:regular" type="text/css" >
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Junge" type="text/css">
   <link rel="stylesheet" href="assets/fonts/raphaelicons.css">
-  <link rel="stylesheet" href="assets/css/styles.min.css">
+  <link rel="stylesheet" href="assets/css/styles.min.css"> 
   <script src="assets/js/libs/modernizr-2.5.2.min.js"></script>
 </head>
 <!--[if lt IE 7]> <body class="ie6 oldies"> <![endif]-->
@@ -20,11 +20,11 @@
 <!--[if lte IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header class="clearfix">
       <div class="container">
-        <a id="logo" href="index.html">It Fits</a>
+        <a id="logo" href="index.html">Asociación Peruana de Cetrería y Conservación de Aves de Presa</a>
         <ul class="social-icons">
           <li><a href="https://www.facebook.com/pages/APCCAP-Asociación-Peruana-de-Cetrería-y-Conservación-de-Aves-de-Presa" class="icon flip">^</a></li>
-          <li><a href="" class="icon">T</a></li>
-          <li><a href="http://www.twitter.com/cssjunction" class="icon">^</a></li>
+          <!-- <li><a href="" class="icon">T</a></li> -->
+          <!-- <li><a href="http://www.twitter.com/cssjunction" class="icon">^</a></li> -->
         </ul>
         <nav class="clearfix">
           <ul role="navigation">
@@ -62,14 +62,14 @@
                 <li>Donec cursus pellentesque mauris vitae ultricies.</li>
                 <li>Donec lacinia nunc in nisl hendrerit scelerisque.</li>
               </ul>
-              <a href="page.html" class="button left">Learn more <span class="icon">:</span></a>
+             <!-- <a href="page.html" class="button left">Learn more <span class="icon">:</span></a> -->
            </div>
            <aside role="complementary">
-               <a href="#demo-url"><img src="http://lorempixel.com/420/290/nature/" alt="Lorem ipsum dolor..."></a>
+               <a href="#demo-url"><img src="http://www.cetrero.com/images/deiroleucus.jpg" alt="Lorem ipsum dolor..."></a>
            </aside>
        </article>
    </section> <!-- // banner ends -->
-   <section class="container">
+   <!-- <section class="container">
        <div class="columns">
            <article>
              <figure>
@@ -108,18 +108,18 @@
              </figure>
            </article>
        </div> <!-- //.columns -->
-       <ul class="thumb-rotator">
+     <!--  <ul class="thumb-rotator">
          <li><a href=""><img src="http://flickholdr.com/165/65/logo" alt="" ></a></li>
          <li><a href=""><img src="http://flickholdr.com/165/65/brand" alt="" ></a></li>
          <li><a href=""><img src="http://flickholdr.com/165/65/apple" alt="" ></a></li>
          <li><a href=""><img src="http://flickholdr.com/165/65/nike" alt="" ></a></li>
          <li><a href=""><img src="http://flickholdr.com/165/65/levi" alt="" ></a></li>
        </ul>
-   </section>
+   </section> -->
   <footer role="contentinfo">
       <p>
-        <span class="left">CSS Junction &copy; - 2013 | Released under Creative Common License. <a href="#">Goto Top</a></span>
-        <a href="index.html">HOME</a> | <a href="portfolio.html">PORTFOLIO</a> | <a href="page.html">PAGE</a> |  <a href="blog.html">BLOG</a> | <a href="contact.html">CONTACT US</a>
+        <span class="left">CSS Junction &copy; - 2013 | Released under Creative Common License. <a href="#">Ir a inicio</a></span>
+        <a href="index.html">Inicio</a> | <a href="portfolio.html">Sobre APCCAP</a> | <a href="page.html">Foro</a> |  <a href="blog.html">Eventos</a> | <a href="contact.html">Contactenos</a>
       </p>
   </footer>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
