--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              <!-- <a href="page.html" class="button left">Learn more <span class="icon">:</span></a> -->
            </div>
            <aside role="complementary">
-               <a href="#demo-url"><img src="http://www.cetrero.com/images/deiroleucus.jpg" alt="Lorem ipsum dolor..."></a>
+               <a href="#demo-url"><img src="https://s-media-cache-ak0.pinimg.com/236x/4d/6d/19/4d6d191b3e510d8ea893bd95c491733c.jpg" alt="Lorem ipsum dolor..."></a>
            </aside>
        </article>
    </section> <!-- // banner ends -->
