--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<span class="caret"></span></a>
 			<ul class='dropdown-menu'>
 				<li><a>Tienda de cetrería</a></li>
-				<li><a>tienda de telemetría</a></li>
+				<li><a>Tienda de telemetría</a></li>
 				<li><a>Criaderos</a></li>
 				<li><a>Clínicas Veterinarias Especializadas</a></li>
 				<li><a>Artesanos</a></li>
@@ -55,10 +55,21 @@
 				<li><a>Empresas de control biológico</a></li>
 			</ul>
 		</li>
-        <li><a href="#">Links</a></li> 
-        <li><a href="#">Contactos</a></li> 
-        <li><a href="#">Galeria</a></li>
-        <li><a href="#">Noticias</a></li>
+		<li class="dropdown">
+			<a class="dropdown-toggle" data-toggle="dropdown" href="#">Galería
+			<span class="caret"></span></a>
+			<ul class='dropdown-menu'>
+				<li><a>Fotos</a></li>
+				<li><a>Vídeos</a></li>
+			</ul>
+		<li class="dropdown">
+			<a class="dropdown-toggle" data-toggle="dropdown" href="#">Noticias
+			<span class="caret"></span></a>
+			<ul class='dropdown-menu'>
+				<li><a>Locales</a></li>
+				<li><a>Internacionales</a></li>
+				<li><a>Conservación</a></li>
+			</ul>
         <li><a href="#">Foros</a></li>
       </ul>
     </div>
