--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> 
+
 	<link rel="stylesheet" href="/home/dcabrera/Programs/APCCAP/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/home/dcabrera/Programs/APCCAP/public/css/style.css">
 	<script src="/home/dcabrera/Programs/APCCAP/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <title>APCCAP</title>
 
@@ -23,7 +25,11 @@
     <![endif]-->
   </head>
   <body>
-<div id="header">	
+
+<div class="page-header no-margin no-padding">
+<image class="image-responsive" src=public/images/apccap_cover.png>
+</div>
+<div class="container">
 <div id="fix">
    <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -75,6 +81,7 @@
     </div>
   </div>
 </nav>
+</div>
 </div>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
