--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> 
 
 	<link rel="stylesheet" href="/home/dcabrera/Programs/APCCAP/bootstrap-3.3.5-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/home/dcabrera/Programs/APCCAP/public/css/style.css">
+	<link rel="stylesheet" href="/home/dcabrera/Programs/APCCAP/cabrerachaparro.github.io/public/css/style.css">
 	<script src="/home/dcabrera/Programs/APCCAP/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <title>APCCAP</title>
 
@@ -24,19 +24,22 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-
-<div class="page-header no-margin no-padding">
-<image class="image-responsive" src=public/images/apccap_cover.png>
-</div>
+  <body class="body">
 <div class="container">
-<div id="fix">
-   <nav class="navbar navbar-inverse">
+<div class="page-header no-margin no-padding">
+<image class="img-responsive" src=public/images/apccap_cover.png>
+</div>
+   <nav class="navbar navbar-inverse navbar-static-top no-margin" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">APCCAP</a>
-    </div>
-    <div>
+	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		<span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+	</button>
+      <a class="navbar-brand no-padding" href="#"> <img class="img-circle no-margin no-padding" src="public/images/apccap4.png" width="50"></a></div>
+    
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Inicio</a></li>
         <li class="dropdown">
@@ -81,7 +84,7 @@
     </div>
   </div>
 </nav>
-</div>
+
 </div>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
