--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-md-8">
 		<div class="jumbotron other-color">
-			<h2> Bienvenidos a la Asociación de Cetrería y Aves de Presa del Perú</h2>
+			<h2> Bienvenidos a la Asociación de Cetrería y Conservación de Aves de Presa del Perú</h2>
 		</div>	
 		<section>	
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis dui ut scelerisque congue. Donec turpis mauris, fermentum a cursus eu, sagittis non mauris. Donec et 
