--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="container">
 <div class="page-header no-margin no-padding">
 <!-- <image class="img-responsive" src=public/images/apccap_cover.png> -->
-<image class="img-rounded img-responsive" src="public/images/sfw_66v8930_0.jpg" >
+<image class="img-rounded img-responsive" src="public/images/cover2.png" >
 </div>
    <nav class="navbar navbar-inverse navbar-static-top no-margin" role="navigation">
   <div class="container-fluid">
