--- a/index.html
+++ b/index.html
@@ -120,11 +120,46 @@
 			<div class="pull-right">
 				<img class="img-circle img-responsive no-margin no-padding"  src="public/images/apccap4.png" width="200px" height="200px">
 			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis dui ut scelerisque congue. Donec turpis mauris, fermentum a cursus eu, sagittis non mauris. Donec et 
+				metus a libero pulvinar venenatis eu ac diam. Proin fermentum laoreet enim, consequat varius lacus volutpat vel. Phasellus eget odio consectetur, cursus purus in, porta ipsum.
+				 Quisque tempus ante sit amet massa condimentum sollicitudin. Vestibulum risus diam, elementum at nulla at, efficitur bibendum ante. Nulla nunc enim, dapibus et sem at, 
+				 efficitur rutrum lorem. Nulla facilisi.
+			</p>
 		</div>
       </div>
     </div>
 	<div class="section"><div class="container"><div class="row"><div class="col-md-12"><hr>
 	</div></div></div></div>
+	<div class="neighborhood-guides">
+<div class="container">
+<h2></h2>
+<p> </p>
+<div class="row">
+<div class="col-md-4">
+    <div class="thumbnail">
+    <img class="img-rounded img-responsive"src="public/images/portada_espizaetus.jpg">
+    </div>
+    <div class="thumbnail">
+    <img class="img-rounded img-responsive" src="public/images/portada_arpia.jpg">
+    </div>
+</div>
+<div class="col-md-4">
+    <div class="thumbnail">
+    <img class="img-rounded img-responsive" src="public/images/sfw_66v8930_0.jpg">
+    </div>
+    <div class="thumbnail">
+    <img class="img-rounded img-responsive" src= "public/images/portada_melano.jpg">
+    </div>
+</div>
+<div class="col-md-4">
+    <div class="thumbnail">
+    <img  class="img-rounded img-responsive"src="public/images/portada_deiro.jpg" >
+    </div>
+    
+</div>
+</div>
+</div>
+</div>
 <div id="footer">
 <div class="container">
   <div class="row">
@@ -198,6 +233,7 @@
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="/home/dcabrera/Programs/APCCAP/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
