--- a/index.html
+++ b/index.html
@@ -136,23 +136,23 @@
 <p> </p>
 <div class="row">
 <div class="col-md-4">
-    <div class="thumbnail">
-    <img class="img-rounded img-responsive"src="public/images/portada_espizaetus.jpg">
+    <div class="thumbnail no-border no-padding transparent">
+    <img class="img-circle" src="public/images/portada_espizaetus.png">
     </div>
-    <div class="thumbnail">
+    <div class="thumbnail no-border no-padding transparent">
     <img class="img-rounded img-responsive" src="public/images/portada_arpia.jpg">
     </div>
 </div>
 <div class="col-md-4">
-    <div class="thumbnail">
+    <div class="thumbnail no-border no-padding transparent">
     <img class="img-rounded img-responsive" src="public/images/sfw_66v8930_0.jpg">
     </div>
-    <div class="thumbnail">
+    <div class="thumbnail no-border no-padding transparent">
     <img class="img-rounded img-responsive" src= "public/images/portada_melano.jpg">
     </div>
 </div>
 <div class="col-md-4">
-    <div class="thumbnail">
+    <div class="thumbnail no-border no-padding transparent">
     <img  class="img-rounded img-responsive"src="public/images/portada_deiro.jpg" >
     </div>
     
@@ -166,7 +166,7 @@
     
       <div class="col-sm-3">
         <div class="foot-header">
-          APCCAP <img src="">
+          <img src="public/images/logoletras.png" width="150px" height="50px">
         </div>
         <div class="foot-links">
           <a href="">Quiénes somos</a>
