--- a/index.html
+++ b/index.html
@@ -117,14 +117,17 @@
 		
 		</div>
         <div class="col-md-4">
+			
 			<div class="pull-right">
 				<img class="img-circle img-responsive no-margin no-padding"  src="public/images/apccap4.png" width="200px" height="200px">
 			</div>
+			<div class="pull-right">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mattis dui ut scelerisque congue. Donec turpis mauris, fermentum a cursus eu, sagittis non mauris. Donec et 
 				metus a libero pulvinar venenatis eu ac diam. Proin fermentum laoreet enim, consequat varius lacus volutpat vel. Phasellus eget odio consectetur, cursus purus in, porta ipsum.
 				 Quisque tempus ante sit amet massa condimentum sollicitudin. Vestibulum risus diam, elementum at nulla at, efficitur bibendum ante. Nulla nunc enim, dapibus et sem at, 
 				 efficitur rutrum lorem. Nulla facilisi.
 			</p>
+			</div>
 		</div>
       </div>
     </div>
