--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="container-fluid">
+        Hola
         <img src="public/images/11aniversario.jpg">
     </div>
 </body>
