--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        Hola
-        <img src="public/images/11aniversario.jpg">
+        <img src="public/images/11aniversario.jpg" class="img-fluid">
     </div>
 </body>
 </html>
