--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Feliz 11 Aniversario</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid center">
         <img src="public/images/11aniversario.jpg" class="img-fluid">
     </div>
 </body>
