--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container-fluid center">
-        <img src="public/images/11aniversario.jpg" class="img-fluid">
+        <a href="song.html"> <img src="public/images/11aniversario.jpg" class="img-fluid"> </a>
     </div>
 </body>
 </html>
